--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,58 @@
-.thumbnail{
-  width: 300px;
-  display: block;
+p{
+  font-family: Roboto, Arial;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .search-bar{
   display: block;
 }
 
-.video-title{
-
+.video-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 15px;
+  row-gap: 40px;
 }
 
-.video-author, 
-.video-stats{
-
+.thumbnail{
+  width: 100%;
 }
 
-.video-preview{
-  width: 300px;
+.channel-picture{
   display: inline-block;
+  width: 50px;
   vertical-align: top;
-  margin-right: 15px;
+}
+
+.video-info{
+  display: inline-block;
+  width: 200px;
+}
+
+.profile-picture{
+  width: 40px;
+  border-radius: 25px;
+}
+
+.video-title{
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.thumbnail-row{
+  margin-bottom: 10px;
+}
+
+.video-author,
+.video-stats{
+  font-size: 12px;
+  color: rgb(96, 96, 96);
+}
+
+.video-author{
+  margin-bottom: 5px;
 }
