--- a/styles/header.css
+++ b/styles/header.css
@@ -2,22 +2,86 @@
     height: 60px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
 }
 .left-section{
-    background-color: lightblue;
-    width: 150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .middle-section{
-    background-color: lightcoral;
+    display: flex;
+    align-items: center;
     flex: 1;
     margin-left: 50px;
     margin-right: 35px;
     max-width: 500px;
 }
 
-.right-section{
-    background-color: lightblue;
-    width: 200px;
+.hamburger-icon{
+    height: 25px;
+    margin: 0px 20px 0px 24px;
 }
+
+.youtube-logo{
+    height: 20px;
+}
+
+.search-bar{
+    height: 40px;
+    padding-left: 10px;
+    font-size: 15px;
+    border: 1px solid rgb(210, 209, 209);
+    border-radius: 2px;
+    box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.05);
+}
+
+.search-button{
+    height: 40px;
+    width: 70px;
+    border: 1px solid rgb(210, 209, 209);
+    margin-left: -1px;
+}
+
+.search-button img{
+    width: 25px;
+}
+
+.voice-search-button{
+    height: 40px;
+    width: 40px;
+    border: none;
+    border-radius: 20px;
+    background-color: rgb(242, 242, 242);
+    margin-left: 10px;
+}
+
+.voice-search-button img{
+    height: 22px;
+}
+
+.right-section{
+    width: 180px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 23px;
+}
+
+.upload-icon{
+    height: 24px;
+}
+
+.youtube-apps-icon{
+    height: 24px;;
+}
+
+.notifications-icon{
+    height: 24px;
+}
+
+.channel-picture-icon{
+    height:35px;
+    border-radius: 20px;
+} 
