--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,7 @@
 .header{
     height: 60px;
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
     align-items: center;
 }
@@ -29,7 +30,9 @@
 }
 
 .search-bar{
+    flex: 1;
     height: 40px;
+    width: 0;
     padding-left: 10px;
     font-size: 15px;
     border: 1px solid rgb(210, 209, 209);
@@ -67,6 +70,7 @@
     justify-content: space-between;
     align-items: center;
     margin-right: 23px;
+    flex-shrink: 0;
 }
 
 .upload-icon{
