--- a/styles/header.css
+++ b/styles/header.css
@@ -15,14 +15,14 @@
     display: flex;
     align-items: center;
     flex: 1;
-    margin-left: 50px;
+    margin-left: 60px;
     margin-right: 35px;
-    max-width: 500px;
+    max-width: 480px;
 }
 
 .hamburger-icon{
-    height: 25px;
-    margin: 0px 20px 0px 24px;
+    height: 23px;
+    margin: 0px 24px 0px 24px;
 }
 
 .youtube-logo{
@@ -34,16 +34,17 @@
     height: 40px;
     width: 0;
     padding-left: 10px;
-    font-size: 15px;
-    border: 1px solid rgb(210, 209, 209);
+    font-size: 16px;
+    border: 1px solid rgb(192, 192, 192);
     border-radius: 2px;
     box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.05);
 }
 
 .search-button{
     height: 40px;
-    width: 70px;
-    border: 1px solid rgb(210, 209, 209);
+    width: 65px;
+    border: 1px solid rgb(211, 209, 209);
+    background-color: rgb(251, 251, 251);
     margin-left: -1px;
 }
 
@@ -56,12 +57,12 @@
     width: 40px;
     border: none;
     border-radius: 20px;
-    background-color: rgb(242, 242, 242);
     margin-left: 10px;
+    background-color: white;
 }
 
 .voice-search-button img{
-    height: 22px;
+    height: 24px;
 }
 
 .right-section{
