--- a/styles/general.css
+++ b/styles/general.css
@@ -1,5 +1,9 @@
 body{
     margin: 0;
+    padding-top: 80px;
+    padding-left: 90px;
+    padding-right: 20px;
+    background-color: rgb(246, 246, 246);
 }
 
 p{
