--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,17 @@
 .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     height: 60px;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
+    border-bottom: 1px solid rgb(231, 231, 231);
 }
+
 .left-section{
     display: flex;
     justify-content: space-between;
@@ -90,3 +97,4 @@
     height:35px;
     border-radius: 20px;
 } 
+
