--- a/styles/header.css
+++ b/styles/header.css
@@ -98,3 +98,18 @@
     border-radius: 20px;
 } 
 
+.notification-icon-container{
+    position: relative;
+}
+.notification-count{
+    position: absolute;
+    top: -1;
+    left: 12;
+    background-color: rgb(198, 9, 9);
+    color: white;
+    font-size: 10px;
+    font-family: roboto, arial;
+    padding: 2px 6px 2px 6px;
+    border-radius: 10px;
+    border: 1px solid white;
+}
