--- a/styles/video.css
+++ b/styles/video.css
@@ -9,15 +9,16 @@
   width: 100%;
 }
 
+.channel-info{
+  display: grid;
+  grid-template-columns: 50px 1fr;
+}
+
 .channel-picture{
-  display: inline-block;
   width: 50px;
-  vertical-align: top;
 }
 
 .video-info{
-  display: inline-block;
-  width: 200px;
 }
 
 .profile-picture{
@@ -45,4 +46,21 @@
 
 .video-author{
   margin-bottom: 5px;
+}
+
+.thumbnail-row{
+  position: relative;
+}
+
+.video-time{
+  position: absolute;
+  bottom: 6px;
+  right: 5px;
+  background-color: black;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-size: 12px;
+  color: white;
 }
