--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -6,7 +6,7 @@
     bottom: 0;
     width: 70px;
     background-color: rgb(255, 255, 255);
-    
+    z-index: 200;
 }
 
 .sidebar-button{
@@ -20,4 +20,8 @@
 .sidebar-button img{
     height: 25px;
     margin-bottom: 5px;
+}
+
+.sidebar-button:hover{
+    background-color: rgb(242, 242, 242);
 }
