--- a/styles/general.css
+++ b/styles/general.css
@@ -10,6 +10,11 @@ p{
     font-family: Roboto, Arial;
     margin-top: 0;
     margin-bottom: 0;
-  }
-  
-  
+}
+
+a{
+    color: black;
+    text-decoration: none;
+}
+
+
