--- a/styles/video.css
+++ b/styles/video.css
@@ -16,14 +16,13 @@
 
 .channel-picture{
   width: 50px;
-}
-
-.video-info{
+  position: relative;
 }
 
 .profile-picture{
   width: 40px;
   border-radius: 25px;
+  cursor: pointer;
 }
 
 .video-title{
@@ -63,4 +62,24 @@
   padding-bottom: 3px;
   font-size: 12px;
   color: white;
+}
+
+.channel-pick{
+  position: absolute;
+  display: grid;
+  grid-template-columns: 60px 1fr;
+  background-color: white;
+  width: 185px;
+  padding:10px;
+  font-size: 14px;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+}
+
+.wrapper:hover + .channel-pick{
+  opacity: 1;
 }
