--- a/styles/general.css
+++ b/styles/general.css
@@ -4,10 +4,11 @@ body{
     padding-left: 90px;
     padding-right: 20px;
     background-color: rgb(246, 246, 246);
+    padding-bottom: 100px;
+    font-family: Roboto, Arial;
 }
 
 p{
-    font-family: Roboto, Arial;
     margin-top: 0;
     margin-bottom: 0;
 }
