--- a/styles/video.css
+++ b/styles/video.css
@@ -56,10 +56,7 @@
   bottom: 6px;
   right: 5px;
   background-color: black;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  padding: 4px;
   font-size: 12px;
   color: white;
 }
